fixed the layout issues with a few of the dynamic pages

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -72,7 +72,6 @@ body {
     top: 0;
     left: 0;
     color: #666;
-    height: 800px;
     z-index: 100;
 
     p, ul {
@@ -81,8 +80,6 @@ body {
 	}
 
     .main-content {
-    	width: 800px;
-	    margin: 20px auto 30px;
 	    background-color: #FFF;
 	    box-shadow: 5px 5px 5px #000;
 	    border: 2px solid #000;
@@ -90,11 +87,9 @@ body {
 	    h1 {
 	    	display: block;
 		    float: none;
-		    margin-left: 50px;
 		    padding: 0;
 		    color: #666;
 		    font-size: 24px;
 	    }
     }
 }
-	
