--- a/src/views/artView.less
+++ b/src/views/artView.less
@@ -1,4 +1,13 @@
 #art-page {
+	&.main-content {
+    	width: 800px;
+    	margin: 20px auto 30px;
+
+	    h1 {
+		    margin-left: 50px;
+		}
+    }
+
 	article {
 	    display: inline-block;
 	    margin: 0 -26px 37px 50px;
