--- a/src/views/fullArtView.less
+++ b/src/views/fullArtView.less
@@ -1,4 +1,10 @@
 #dynamic-content {
+	#full-art-page {
+		&.main-content {
+    		margin: 0 auto 30px;
+    	}
+    }
+
     &.art-full-page {
 	    position: relative;
 	    top: 0;
