--- a/src/views/portfolioView.less
+++ b/src/views/portfolioView.less
@@ -1,5 +1,5 @@
 #portfolio-page {
-    width: 800px;
+    width: 700px;
     margin-top: 20px;
     background-color: #FFF;
     box-shadow: 5px 5px 5px #000;
@@ -9,8 +9,9 @@
 
     &.main-content {
     	width: 700px;
+    	margin: 20px auto 30px;
 
-    	h1 {
+	    h1 {
 		    margin-left: 0;
 		}
     }
@@ -70,4 +71,8 @@
 			}
 		}
     }
+}
+
+#dynamic-content .main-content {
+	
 }
